--- a/loginpage.html
+++ b/loginpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>login facebook </title>
+ <title>facebook </title>
 <style type="text/css">
 	body{background-color: rgba(216, 216, 236, 0.822);}
 	button{padding-left: 170px;
